# georg-stage-vagtskema

./: .gitignore  LICENCE.txt  Makefile  README.md  pyproject.toml  start_mac  start_win.bat  template.html
old/: old_controller.py  old_model.py  old_view.py
old/autofill/: __init__.py  lp.py
src/: __main__.py
src/georgstage/: __init__.py  __main__.py  app.py  cli.py  export.py  icon_data.py  model.py  registry.py  solver.py  util.py  validator.py
src/georgstage/components/: __init__.py  fancy_table.py  responsive_notebook.py  tooltip.py  vagtperiode_form.py  vertical_scroll.py
src/georgstage/tabs/: __init__.py  afmønstringer.py  export.py  statistik.py  vagtliste.py  vagtperioder.py
